[gd_scene load_steps=40 format=2]

[ext_resource path="res://Art/Lucky/Chat Room Assets/minniePortrait.png" type="Texture" id=1]
[ext_resource path="res://Art/Lucky/Chat Room Assets/hyunaPortrait.png" type="Texture" id=2]
[ext_resource path="res://Art/Lucky/Chat Room Assets/DateButton.png" type="Texture" id=3]
[ext_resource path="res://Art/Lucky/Chat Room Assets/optionButton.png" type="Texture" id=4]
[ext_resource path="res://Art/Lucky/Chat Room Assets/AffectionMeter_progress.png" type="Texture" id=5]
[ext_resource path="res://Art/Lucky/Chat Room Assets/erikaPortrait.png" type="Texture" id=6]
[ext_resource path="res://Art/Lucky/Chat Room Assets/DateButton2.png" type="Texture" id=7]
[ext_resource path="res://Art/Lucky/Chat Room Assets/ChatRoomBackgroun Straight 2x.png" type="Texture" id=8]
[ext_resource path="res://Art/Lucky/Chat Room Assets/optionButton2.png" type="Texture" id=9]
[ext_resource path="res://Art/Lucky/Chat Room Assets/SpeechBubble Main Character-export.png" type="Texture" id=10]
[ext_resource path="res://Art/Lucky/Chat Room Assets/SpeechBubble2.png" type="Texture" id=11]
[ext_resource path="res://Art/Lucky/Chat Room Assets/SpeechBubble3.png" type="Texture" id=12]
[ext_resource path="res://Art/Lucky/Chat Room Assets/SpeechBubble Opponent-export.png" type="Texture" id=13]
[ext_resource path="res://Art/Lucky/Chat Room Assets/AffectionMeter_empty.png" type="Texture" id=14]
[ext_resource path="res://Art/Lucky/Chat Room Assets/optionButton3.png" type="Texture" id=15]
[ext_resource path="res://Art/Lucky/Chat Room Assets/DateButton3.png" type="Texture" id=16]
[ext_resource path="res://Source/Main/Button.gd" type="Script" id=17]
[ext_resource path="res://Source/Chat/ChatSystem.gd" type="Script" id=18]
[ext_resource path="res://Art/Lucky/Level Select Assets/DataCard2.png" type="Texture" id=19]
[ext_resource path="res://Resource/Font/monogram.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Art/Lucky/Level Select Assets/Erika Card 200x.png" type="Texture" id=21]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 164, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 328, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 492, 0, 164, 48 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "typing",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 164, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 13 )
region = Rect2( 328, 0, 164, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 13 )
region = Rect2( 492, 0, 164, 48 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "typing",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 56, 54 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 56, 54 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 56, 50 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "hyuna",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "minnie",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "erika",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 20 )

[sub_resource type="Animation" id=17]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeEffect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ChatRoom" type="Node"]
script = ExtResource( 18 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false

[node name="SpeechBubble" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 370, 147 )
frames = SubResource( 6 )
animation = "idle"
playing = true

[node name="SpeechBubble2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 325, 84 )
frames = SubResource( 12 )
animation = "typing"
frame = 2
playing = true

[node name="GirlPortrait" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 85, 40 )
frames = SubResource( 16 )
animation = "hyuna"

[node name="OptionButton" type="TextureButton" parent="."]
margin_left = 235.0
margin_top = 220.0
margin_right = 331.0
margin_bottom = 268.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
released_texture = ExtResource( 15 )

[node name="AffectionMeter" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -114.0
margin_right = 43.0
margin_bottom = 114.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="AffectionMeter"]
margin_left = 8.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 206.0
texture_progress = ExtResource( 5 )
fill_mode = 3

[node name="GirlCard" type="TextureRect" parent="."]
margin_left = 31.0
margin_top = 21.0
margin_right = 163.0
margin_bottom = 197.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GirlCard"]
margin_left = 12.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 76.0
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GirlCard"]
margin_left = 16.0
margin_top = 84.0
margin_right = 116.0
margin_bottom = 166.0
custom_colors/font_color = Color( 0.796078, 0.301961, 0.407843, 1 )
custom_fonts/font = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateButton" type="TextureButton" parent="."]
margin_left = 42.0
margin_top = 217.0
margin_right = 152.0
margin_bottom = 249.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
released_texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fadein"
anims/fadein = SubResource( 17 )

[node name="FadeEffect" type="ColorRect" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 270.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
