[gd_scene load_steps=13 format=2]

[ext_resource path="res://Source/Chat/ChatSystem.gd" type="Script" id=1]
[ext_resource path="res://Art/Lucky/Chat Room Assets/Text Option Button-export.png" type="Texture" id=2]
[ext_resource path="res://Source/Chat/Chat.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Lucky/Chat Room Assets/ChatRoomBackground 2x - Front.png" type="Texture" id=4]
[ext_resource path="res://Art/Lucky/Chat Room Assets/optionButton.png" type="Texture" id=5]
[ext_resource path="res://Art/Lucky/Chat Room Assets/ChatRoomBackground 2x.png" type="Texture" id=6]
[ext_resource path="res://Art/Lucky/Chat Room Assets/optionButton2.png" type="Texture" id=7]
[ext_resource path="res://Resource/Font/monogram.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Source/Chat/PlayerChat.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=3]
VScrollBar/styles/scroll = SubResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[node name="ChatRoom" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
chat_scene = ExtResource( 3 )
player_chat_scene = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatArea" type="ScrollContainer" parent="."]
margin_left = 250.0
margin_top = 13.0
margin_right = 448.0
margin_bottom = 191.0
rect_rotation = 6.0
theme = SubResource( 3 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ChatArea"]
margin_right = 198.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Choices" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -307.0
margin_top = -56.0
margin_right = -11.0
margin_bottom = -8.0
grow_horizontal = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="First" type="TextureButton" parent="Choices"]
margin_right = 96.0
margin_bottom = 48.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/First"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Second" type="TextureButton" parent="Choices"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 48.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Second"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Third" type="TextureButton" parent="Choices"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 48.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Third"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text Options" type="TextureRect" parent="."]
visible = false
margin_left = 149.0
margin_top = 212.0
margin_right = 469.0
margin_bottom = 260.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Choices/First" to="." method="_on_First_pressed"]
[connection signal="pressed" from="Choices/Second" to="." method="_on_Second_pressed"]
[connection signal="pressed" from="Choices/Third" to="." method="_on_Third_pressed"]
